--- a/index.css
+++ b/index.css
@@ -1,8 +1,7 @@
 .body {
-  background-color: rgb(0, 0, 0);
+  background: linear-gradient(to right, #000428, #004e92);
   color: white;
   font-family: cursive;
-  border: 3px solid red;
 }
 
 .imagen {
@@ -19,84 +18,65 @@
 }
 
 .conteinter {
-   /* max-width: 1300px;
-    margin: auto;*/
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    justify-content:space-evenly;
-    grid-gap:3px;
-    border: 3px solid red;
+  width: 80%;
+  margin: 0 auto;
+  padding: 20px;
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+  justify-content: end;
 }
 
 .button {
-    border-radius: 5px;
-    border: 2px solid white;
-    box-shadow: 2px 2px 10px white;
-    background-color: rgb(247, 247, 247);
+  border-radius: 5px;
+  border: 2px solid white;
+  box-shadow: 2px 2px 10px white;
+  background-color: rgb(247, 247, 247);
 }
 .button:hover {
-    background-color: rgb(116, 109, 109);
+  background-color: rgb(116, 109, 109);
 }
 
 .portfolio {
-  /*  display: flex;
-    justify-content: start;*/
-    order:1;
-    border: 3px solid red;
+  border: 3px solid rgb(247, 247, 247);
+  border-radius: 10px;
+  box-shadow: 2px 2px 10px white;
 }
 
-
-.programacion{
-    
-    order:2;
-    border: 3px solid red;
-}
-
-.idioma {
-   /* display: flex;
-    justify-content: space-around;*/
-    order:3;
-    border: 3px solid red;
-}
-
-
-
-
-
-
-/*
-
-
-
-.idioma {
-  display: grid;
-  border: 3px solid red;
-  order: 1;
-}
-
-.portfolio {
-  display: grid;
-  border: 3px solid red;
-  order: 2;
-}
 .programacion {
-  display: grid;
-  border: 6px solid red;
-  order: 3;
+  border-radius: 5px;
+  border: 3px solid white;
+  box-shadow: 2px 2px 10px white;
+}
+
+.idioma {
+  border-radius: 5px;
+  border: 3px solid white;
+  box-shadow: 2px 2px 10px white;
+}
+
+.aside {
+  width: 80%;
+  margin: 0 auto;
+  padding: 20px;
+  display: flex;
+  flex-direction: row;
+  gap: 360px;
 }
 
 .lugares {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding-bottom: 25px;
-  border: 3px solid red;
+  border: 3px solid rgb(247, 247, 247);
+  border-radius: 10px;
+  box-shadow: 3px 3px 10px white;
 }
 
 .carrera {
+  border: 3px solid rgb(247, 247, 247);
+  border-radius: 10px;
+  box-shadow: 3px 3px 10px white;
+}
+
+footer {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding-bottom: 25px;
-  border: 3px solid red;
+  justify-content: center;
 }
