se modifico el index.css y formulario.css

--- a/formulario.css
+++ b/formulario.css
@@ -1,8 +1,6 @@
 .body {
   background: linear-gradient(to right, #03001e, #7303c0, #ec38bc, #fdeff9);
   font-family: cursive;
-  display: flex;
-  justify-content: center;
   margin: 0 auto;
   color: white;
 }
@@ -18,13 +16,27 @@
 }
 
 .main {
-  border: 4px solid white;
   box-shadow: #03001e;
   gap: 20px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 
 .h3 {
   text-align: center;
+}
+
+/* fieldset */
+
+fieldset {
+  border: 3px solid rgb(255, 255, 255);
+  border-radius: 10px;
+  box-shadow: 3px 3px 10px white;
+  box-shadow: gray;
+  margin: 2rem;
+  padding: 2rem;
 }
 
 .button {
