--- a/index.css
+++ b/index.css
@@ -37,43 +37,20 @@
   background-color: rgb(116, 109, 109);
 }
 
-.portfolio {
+.carta {
   border: 3px solid rgb(247, 247, 247);
   border-radius: 10px;
-  box-shadow: 2px 2px 10px white;
-}
-
-.programacion {
-  border-radius: 5px;
-  border: 3px solid white;
-  box-shadow: 2px 2px 10px white;
-}
-
-.idioma {
-  border-radius: 5px;
-  border: 3px solid white;
+  padding: 20px;
   box-shadow: 2px 2px 10px white;
 }
 
 .aside {
   width: 80%;
   margin: 0 auto;
-  padding: 20px;
   display: flex;
   flex-direction: row;
   gap: 360px;
-}
-
-.lugares {
-  border: 3px solid rgb(247, 247, 247);
-  border-radius: 10px;
-  box-shadow: 3px 3px 10px white;
-}
-
-.carrera {
-  border: 3px solid rgb(247, 247, 247);
-  border-radius: 10px;
-  box-shadow: 3px 3px 10px white;
+  padding: 20px;
 }
 
 footer {
